# knowledge-distill-for-spec-decoding

./: .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run_alpha.sh  run_alpha.yaml  run_bugfix_pipeline.sh  scaffold.sh
configs/: config.yaml
configs/data/: alpaca_50k.yaml  eval_holdout.yaml  (+4 more)
notebooks/: run_eval_pipeline.ipynb  siyuan_zhang_388143.ipynb  tianyi_zhu_386499.ipynb  visualize_qwen3_runtime_heatmap.py  yuchen_ouyang_388166.ipynb  zhiyan_ke_407061.ipynb
rcp_support/: Dockerfile  README.md  build.sh  submit.sh  submit_train.sh
scripts/: check_loss_convergence.py  env.sh  evaluate_sd.py  generate_target_responses.py  hf_sd_speedup.py  qwen3_eval_sweep.py  run_eval_pipeline.py  run_loss_size_ablation.sh  run_loss_size_ablation_10k.sh  run_opd_qwen3_8b_loss_sweep.sh  run_qwen25_targetgen_loss_sweep.sh  run_qwen25_targetgen_vllm_eval_sweep.sh  run_qwen3_eval_sweep.sh  run_qwen3_loss_sweep.sh  run_qwen3_runtime_sweep.sh  run_qwen3_runtime_sweep_interactive.sh  run_target_response_cache.sh  submit_opd_qwen3_8b_loss_sweep.sh  submit_qwen25_targetgen_loss_sweep.sh  submit_qwen25_targetgen_vllm_eval_sweep.sh  submit_qwen3_8b_loss_sweep.sh  submit_qwen3_eval_sweep.sh  submit_qwen3_loss_sweep.sh  submit_qwen3_runtime_sweep.sh  submit_qwen3_runtime_sweep_interactive.sh  submit_target_response_cache.sh  train.py  train_size.py  vllm_sd_speedup.py
tests/: test_config_compose.py  test_data.py  test_eval_wandb.py  test_losses.py  test_opd.py  test_qwen3_eval_sweep.py  test_target_generate.py  test_trainer.py  test_vllm_eval_runner.py
(+24 files in other folders)
