[project]
name = "kdsd"
version = "0.0.0"
description = "Knowledge distillation for speculative decoding (CS-552 MNLP project)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "torch>=2.4",
  "transformers>=4.45",
  "accelerate>=0.34",
  "datasets>=2.20",
  "peft>=0.12",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "wandb>=0.17",
  "jsonlines>=4.0",
  "rich>=13.7",
  "numpy>=1.26",
  "tqdm>=4.66",
  "safetensors>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kdsd"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
